add main design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Github Search</string>
+    <string name="github_search">Github Search</string>
 </resources>
