--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Github Search</string>
     <string name="github_search">Github Search</string>
+    <string name="search_for_your_favourite_repos">Search for your favourite repos</string>
+    <string name="no_repos_found_try_something_else">No repos found, try something else</string>
 </resources>
