--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="github_search">Github Search</string>
     <string name="search_for_your_favourite_repos">Search for your favourite repos</string>
     <string name="no_repos_found_try_something_else">No repos found, try something else</string>
+    <string name="results_could_not_be_loaded">Results could not be loaded</string>
+    <string name="retry">Retry</string>
 </resources>
